Closed
Bug 341568
Opened 19 years ago
Closed 14 years ago
valid subject displayed as blank in thread pane (preceded by bogus header)
Categories
(MailNews Core :: Internationalization, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.9alpha4
People
(Reporter: stan, Assigned: masayuki)
References
Details
Attachments
(4 files, 1 obsolete file)
|
1.97 KB,
message/rfc822
|
Details | |
|
6.28 KB,
patch
|
Bienvenu
:
review+
Bienvenu
:
superreview+
mscott
:
approval-thunderbird2-
|
Details | Diff | Splinter Review |
|
711 bytes,
patch
|
Bienvenu
:
review+
Bienvenu
:
superreview+
|
Details | Diff | Splinter Review |
|
64.54 KB,
image/png
|
Details |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; fr-FR; rv:1.8.0.1) Gecko/20060130 SeaMonkey/1.0
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; fr-FR; rv:1.8.0.1) Gecko/20060130 SeaMonkey/1.0
Looking at the attached picture gives immediate understanding of what happens.
The subject displayed in the list of messages is not the same as the subject displayed in the message.
Reproducible: Didn't try
Steps to Reproduce:
First time it happened for me.
Actual Results:
subjects are different.
Expected Results:
The same subject should be displayed on the UI.
I've looked at other bugs, and there is only one subject.
I attache the mail as well.
Comment 3•19 years ago
|
||
Reproduced TB 2a1-0604, Win2K.
This reproduces easily. If I edit the message and remove that line just before the Subject: in the source -- it's not a header itself, as it has no colon -- the subject displays in the thread pane correctly.
Severity: normal → minor
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Windows XP → Windows 2000
Summary: wrong subject (blank) displayed in the message list - correct subject displayed in message pane → valid subject displayed as blank in thread pane (preceded by bogus header)
Version: unspecified → Trunk
Comment 5•18 years ago
|
||
I'm sure that severity of this bug need to be increased, since
1. It prevents me from visually detecting spam in message list - i have to open message to see it's contents.
2. It prevents me from visually detecting new messages in message list - title of new message is shown in bold, but what use of bold empty string?
| Assignee | ||
Comment 6•18 years ago
|
||
changing to critical.
If using the IMAP, the subject can be repaired by index rebuild, but if using POP3, the subject may not be able to be repaired.
Severity: minor → critical
Keywords: dataloss
| Assignee | ||
Updated•18 years ago
|
Assignee: mail → smontagu
Component: MailNews: Main Mail Window → MailNews: Internationalization
Product: Mozilla Application Suite → Core
QA Contact: mailnews.i18n
| Assignee | ||
Comment 7•18 years ago
|
||
I found a bug point.
The preview text is UTF-8 string and it is shrunken. But the shrinking logic is wrong. It makes the invalid UTF-8 string if the separation point is in a character. (so, it separates a character sometimes.)
Therefore, the preview text that is invalid UTF-8 causes to fail the drawing process.
Assignee: smontagu → masayuki
Status: NEW → ASSIGNED
Attachment #261027 -
Flags: superreview?(bienvenu)
Attachment #261027 -
Flags: review?(bienvenu)
| Assignee | ||
Comment 8•18 years ago
|
||
this is not a dataloss bug. the data is in the database.
Keywords: dataloss
| Assignee | ||
Updated•18 years ago
|
Severity: critical → major
Comment 9•18 years ago
|
||
Comment on attachment 261027 [details] [diff] [review]
Patch rv1.0
makes sense, thx.
Attachment #261027 -
Flags: superreview?(bienvenu)
Attachment #261027 -
Flags: superreview+
Attachment #261027 -
Flags: review?(bienvenu)
Attachment #261027 -
Flags: review+
| Assignee | ||
Comment 10•18 years ago
|
||
checked-in.
Status: ASSIGNED → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9alpha4
| Assignee | ||
Comment 11•18 years ago
|
||
Comment on attachment 261027 [details] [diff] [review]
Patch rv1.0
The blank drawing bug on thread pain is only on trunk. But the preview text broken bug is on branch too. We should take this patch (without nsMsgDBView part) on 1.8 branch too.
Attachment #261027 -
Flags: approval-thunderbird2?
| Assignee | ||
Comment 12•18 years ago
|
||
Note that if we don't take this patch in 2.0 final, it creates the broken preview text and it is saved to the database. The broken text will be used in future version (like trunk.), but the many intl text cannot be used by this bug. We should fix this bug before 2.0 final.
| Assignee | ||
Updated•18 years ago
|
Flags: blocking-thunderbird2?
Comment 13•18 years ago
|
||
Thunderbird 2 is done unless something comes out of the RC that requires a respin. I'm not sure that we'd respin the release to address this issue so it may have to wait for the next version. We could take it in a point release though.
| Assignee | ||
Comment 14•18 years ago
|
||
Scott:
If we don't fix this bug in tb2. We need to check whether the preview text is valid string. Do you have any ideas for cleaning-up the database?
# I worry that the similar bugs will be occurred by the broken preview text.
Comment 15•18 years ago
|
||
In 2.0, preview text is really only interesting for new messages. For the trunk, we do display it with the subject, but that's experimental. If code can be written that tells if preview text is a valid string or not, it would be trivial to remove or maybe correct the invalid strings on the fly.
Updated•18 years ago
|
Flags: blocking-thunderbird2? → blocking-thunderbird2-
Comment 16•18 years ago
|
||
Comment on attachment 261027 [details] [diff] [review]
Patch rv1.0
we aren't going to respin tb2 for this but would like to get it into the security update release.
Attachment #261027 -
Flags: approval1.8.1.4?
Attachment #261027 -
Flags: approval-thunderbird2?
Attachment #261027 -
Flags: approval-thunderbird2-
Comment 17•18 years ago
|
||
Comment on attachment 261027 [details] [diff] [review]
Patch rv1.0
approved for 1.8.1.4, a=dveditz for release-drivers
I didn't think we were doing a Tbird 1.8.1.4-equivalent since that will only be a couple weeks after TB2, but it'll be in the tree for the next one.
Attachment #261027 -
Flags: approval1.8.1.4? → approval1.8.1.4+
| Assignee | ||
Comment 18•18 years ago
|
||
Sorry. The patch has a serious mistake. I'll attach a patch for it.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
| Assignee | ||
Comment 19•18 years ago
|
||
I misunderstand the param of Substring. The second param is a start position, not length. Sorry for the mistake.
Attachment #261717 -
Flags: superreview?(bienvenu)
Attachment #261717 -
Flags: review?(bienvenu)
Updated•18 years ago
|
Attachment #261717 -
Flags: superreview?(bienvenu)
Attachment #261717 -
Flags: superreview+
Attachment #261717 -
Flags: review?(bienvenu)
Attachment #261717 -
Flags: review+
| Assignee | ||
Comment 20•18 years ago
|
||
checked-in, thanks.
Status: REOPENED → RESOLVED
Closed: 18 years ago → 18 years ago
Resolution: --- → FIXED
Comment 21•18 years ago
|
||
Masayuki, can you land both patches on the branch too? Thanks!
| Assignee | ||
Comment 22•18 years ago
|
||
Can I check-in to the branch now?
| Assignee | ||
Comment 24•18 years ago
|
||
backed-out the patch from branch. Because 1.8 branch doesn't have UTF8CharEnumerator in nsUTF8Utils.h :-(
Keywords: fixed1.8.1.4
Comment 25•18 years ago
|
||
Comment on attachment 261027 [details] [diff] [review]
Patch rv1.0
clearing approval flag since this patch doesn't build on the branch.
Attachment #261027 -
Flags: approval1.8.1.4+
Updated•17 years ago
|
Product: Core → MailNews Core
| Reporter | ||
Comment 26•14 years ago
|
||
This bug is still present in TB 7.0.1
Changing state from RESOLVED to VERIFIED.
Status: RESOLVED → VERIFIED
| Reporter | ||
Comment 27•14 years ago
|
||
Refresh (TB7) of the image showing the bug.
Attachment #225628 -
Attachment is obsolete: true
Comment 28•14 years ago
|
||
Please file a new bug.
Status: REOPENED → RESOLVED
Closed: 18 years ago → 14 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•