Bug 341568 valid subject displayed as blank in thread pane (preceded by bogus header) r+sr=bienvenu