mailnews/base/util/nsMsgI18N.cpp
@@ -63,6 +63,7 @@
 #include "prmem.h"
 #include "nsFileSpec.h"
 #include "plstr.h"
+#include "nsUTF8Utils.h"
 
 //
 // International functions necessary for composition
@@ -575,3 +576,34 @@ nsMsgI18NGetAcceptLanguage(void)
   return "en";
 }
 
+nsresult nsMsgI18NShrinkUTF8Str(const nsAFlatCString &inString,
+                                PRUint32 aMaxLength,
+                                nsACString &outString)
+{
+  if (inString.IsEmpty()) {
+    outString.Truncate();
+    return NS_OK;
+  }
+  if (inString.Length() < aMaxLength) {
+    outString.Assign(inString);
+    return NS_OK;
+  }
+  NS_ASSERTION(IsUTF8(inString), "Invalid UTF-8 string is inputted");
+  const char* start = inString.get();
+  const char* end = start + inString.Length();
+  const char* last = start + aMaxLength;
+  const char* cur = start;
+  const char* prev = nsnull;
+  while (cur < last) {
+    prev = cur;
+    if (!UTF8CharEnumerator::NextChar(&cur, end))
+      break;
+  }
+  if (!prev) {
+    outString.Truncate();
+    return NS_OK;
+  }
+  PRUint32 len = prev - start;
+  outString.Assign(Substring(inString, len));
+  return NS_OK;
+}
